--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_executable(Doubly_Linked_List main.cpp List.hpp)
+add_executable(Doubly_Linked_List main.cpp Lists.hpp)
+
+add_executable(Tests TestLists.cpp Lists.hpp catch.hpp)
